--- a/locales/edittraduction.pot
+++ b/locales/edittraduction.pot
@@ -12,6 +12,7 @@ msgstr ""
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en_GB\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,14 +21,14 @@ msgstr ""
 
 #: front/edittraduction.form.php:15 setup.php:38
 #: inc/edittraduction.class.php:86 inc/config.class.php:8
-msgid "Edit traduction"
+msgid "Edit translation"
 msgstr ""
 
 #: front/edittraduction.form.php:37
 msgid "the treduction %1$s has been modified"
 msgstr ""
 
-#: inc/edittraduction.class.php:86 front/edittraduction.form.php:46
+#: inc/edittraduction.class.php:86 front/edittraduction.form.php:30
 msgid "You don't have access denied to modify %1$s"
 msgstr ""
 
@@ -35,22 +36,14 @@ msgstr ""
 msgid "Enable your plugin"
 msgstr ""
 
-#: inc/profile.class.php:104
-msgid "Create"
-msgstr ""
-
-#: inc/profile.class.php:105
-msgid "Read"
-msgstr ""
-
 #: inc/profile.class.php:106
-msgid "Update"
-msgstr ""
-
-#: inc/profile.class.php:108
-msgid "Delete permanently"
+msgid "Allow editing"
 msgstr ""
 
 #: inc/profile.class.php:143
 msgid "General"
+msgstr ""
+
+#: front/edittraduction.form.php:35
+msgid "Please contact your administrator to update file permissions"
 msgstr ""
