--- a/locales/en_GB.po
+++ b/locales/en_GB.po
@@ -16,37 +16,29 @@ msgstr ""
 
 #: front/edittraduction.form.php:15 setup.php:38
 #: inc/edittraduction.class.php:86 inc/config.class.php:8
-msgid "Edit traduction"
+msgid "Edit translation"
 msgstr ""
 
 #: front/edittraduction.form.php:37
 msgid "the treduction %1$s has been modified"
 msgstr ""
 
-#: inc/edittraduction.class.php:86 front/edittraduction.form.php:46
-msgid "You don't have access denied to modify %1$s"
+#: inc/edittraduction.class.php:86 front/edittraduction.form.php:30
+msgid "You are not allowed to edit %1$s"
 msgstr ""
 
 #: front/edittraduction.form.php:66
 msgid "Enable your plugin"
 msgstr ""
 
-#: inc/profile.class.php:104
-msgid "Create"
-msgstr ""
-
-#: inc/profile.class.php:105
-msgid "Read"
-msgstr ""
-
 #: inc/profile.class.php:106
-msgid "Update"
-msgstr ""
-
-#: inc/profile.class.php:108
-msgid "Delete permanently"
+msgid "Allow editing"
 msgstr ""
 
 #: inc/profile.class.php:143
 msgid "General"
+msgstr ""
+
+#: front/edittraduction.form.php:35
+msgid "Please contact your administrator to update file permissions"
 msgstr ""
